# data_collector

connection_test_program/: connection_test_program_main  connection_test_program_main.cpp  test_file.txt
data_recorder/: CMakeLists.txt  DataRecorderService.cpp  DataRecorderService.h  DataStorage.cpp  DataStorage.h  DatabaseStorage.cpp  DatabaseStorage.h  FileBasedStorage.cpp  FileBasedStorage.h  Forwarder.cpp  Forwarder.h  NullEntry.h  data_recorder_main.cpp
dummy_device/: CMakeLists.txt  DummyEPRODevice.cpp  DummyEproDevice.h  dummy_device_main.cpp
lib/: BaseSocket.h  ClientSocket.cpp  ClientSocket.h  ConfigurationHandler.cpp  ConfigurationHandler.h  Logger.cpp  Logger.h  ServerSocket.cpp  ServerSocket.h  SocketCallback.h  SocketCommunication.h  SocketManager.cpp  SocketManager.h  Timer.cpp  Timer.h
test_code/: exception_throw.cpp  segfault_test.cpp  sleeping.cpp  test_script.sh
timer_check/: CMakeLists.txt  timer_check_app_main.cpp  timer_check_simple_main.cpp
